--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<ng-lottie
+  width="600px"
+  height="500px"
+  containerClass="moving-box another-class"
+
+  [options]="options"
+
+/>
 <p-button label="Submit"></p-button>
 <div class="flex flex-row flex-wrap">
   <div class="flex align-items-center justify-content-center w-4rem h-4rem bg-primary font-bold border-round m-2">1</div>
