--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,41 @@
-<div class="flex">
+<div class="flex flex-column align-items-center">
   <ng-lottie
     width="600px"
     height="500px"
+    class="w-full"
     containerClass="moving-box another-class"
     [options]="options"
   />
-
+  <h1>吃什麼呢？</h1>
   <div class="flex flex-column">
     <section class="god flex relative">
-      <span>吃什麼呢？</span>
-      <h1>
+      <div
+        class="flex align-items-center justify-content-center flex-column border-white border-1 overflow-hidden h-3rem w-full text-4xl"
+      >
+        @if(!showResult){ @for (location of locationList; track $index) {
         <div
-          class="flex align-items-center justify-content-center flex-column border-white border-1 overflow-hidden h-3rem"
+          class="relative"
+          [class.fadeout]="isPolling"
+          [class.animation-duration-3000]="isPolling"
         >
-          @if(!showResult){ @for (location of locationList; track $index) {
           <div
             class="relative top-10 text-overflow-clip"
             [class.anumation-1]="isPolling"
           >
             {{ location.title }}
           </div>
-
-          } }@else {
-          <div class="relative top-10 text-overflow-clip">
-            {{ selectLocation.title }}
-          </div>
-          }
         </div>
-      </h1>
+
+        } }@else {
+        <div class="relative top-10 text-overflow-clip">
+          {{ selectLocation.title }}
+        </div>
+        }
+      </div>
     </section>
-    <div class="flex">
-      <p-button label="抽籤！" (click)="startPolling()"></p-button>
-    </div>
+  </div>
+  <div class="flex">
+    <p-button label="抽籤！" (click)="startPolling()"></p-button>
   </div>
 
   @if (showResult) {
